.antlr/onixParser.java
// Generated from c:\Users\ruy_g\OneDrive\Área de Trabalho\Transpileitor2\onix.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class onixParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Libstring=1, StringLiteral=2, L_PAR=3, R_PAR=4, L_BRAC=5, R_BRAC=6, L_SBRAC=7, 
		R_SBRAC=8, EQUAL=9, PLUS=10, MINUS=11, MULT=12, POWER=13, DIV=14, NEGATION=15, 
		MOD=16, LESSER_THAN=17, GREATER_THAN=18, LESSER_EQUAL=19, GREATER_EQUAL=20, 
		NOT_EQUAL=21, EQUALS_TO=22, PLUS_ASSIGN=23, MINUS_ASSIGN=24, MULT_ASSIGN=25, 
		DIV_ASSIGN=26, LSH_ASSIGN=27, RSH_ASSIGN=28, AND_ASSIGN=29, XOR_ASSIGN=30, 
		OR_ASSIGN=31, ADDROP=32, BOOL_AND=33, BOOL_OR=34, BITWISE_AND=35, BITWISE_OR=36, 
		BITWISE_XOR=37, BITWISE_LSH=38, BITWISE_RSH=39, DOUBLE_PERIOD=40, ELLIPSIS=41, 
		PERIOD=42, COLON=43, COMMA=44, DOUBLE_COLON=45, ARROW=46, DOUBLE_QUOTE=47, 
		INTERROGATION=48, INCREMENT=49, DECREMENT=50, K_GOTO=51, K_AS=52, K_IMPORT=53, 
		K_USING=54, K_SUB=55, K_FUNC=56, K_RECORD=57, K_LOOP=58, K_CONST=59, K_VAR=60, 
		K_COUNT=61, K_FOR=62, K_BREAK=63, K_CONTINUE=64, K_EACH=65, K_OF=66, K_IN=67, 
		K_WHILE=68, K_REPEAT=69, K_UNTIL=70, K_VM=71, K_CPP=72, K_CPP_VAR=73, 
		K_IF=74, K_ELSE=75, K_END=76, K_RETURN=77, DOUBLE_ARROW=78, K_FALSE=79, 
		K_TRUE=80, K_BYTE=81, K_INT=82, K_LONG=83, K_FLOAT=84, K_STRING=85, LABEL=86, 
		NAME=87, INT=88, HEX=89, BIN=90, FLOAT=91, COMMENT=92, LINE_COMMENT=93, 
		WS=94;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_import_directive = 2, RULE_use_directive = 3, 
		RULE_statement = 4, RULE_ext_block = 5, RULE_body = 6, RULE_record_def = 7, 
		RULE_func_def = 8, RULE_func_stub = 9, RULE_cpp_ext_block = 10, RULE_vm_ext_block = 11, 
		RULE_cpp_func_def = 12, RULE_cpp_var_def = 13, RULE_vm_func_def = 14, 
		RULE_sub_name = 15, RULE_sub_def = 16, RULE_sub_stub = 17, RULE_cpp_sub_def = 18, 
		RULE_vm_sub_def = 19, RULE_any_args = 20, RULE_labelDef = 21, RULE_gotoJump = 22, 
		RULE_breakLoop = 23, RULE_continueLoop = 24, RULE_retStatement = 25, RULE_par = 26, 
		RULE_parlist = 27, RULE_conditional = 28, RULE_if_elseif = 29, RULE_if_else = 30, 
		RULE_for_loop = 31, RULE_range_loop = 32, RULE_for_each_loop = 33, RULE_while_loop = 34, 
		RULE_repeat_loop = 35, RULE_think_loop = 36, RULE_declaration = 37, RULE_constDecUnit = 38, 
		RULE_constDeclaration = 39, RULE_initializer = 40, RULE_varDecUnit = 41, 
		RULE_varDeclaration = 42, RULE_arrayInitializer = 43, RULE_arrayDecUnit = 44, 
		RULE_arrayDeclaration = 45, RULE_assignmentUnit = 46, RULE_assignment = 47, 
		RULE_assignOp = 48, RULE_unaryOp = 49, RULE_propOp = 50, RULE_primaryExpression = 51, 
		RULE_postfixExpression = 52, RULE_exp = 53, RULE_multiplicative = 54, 
		RULE_additive = 55, RULE_shift = 56, RULE_relational = 57, RULE_equality = 58, 
		RULE_bitAnd = 59, RULE_bitXor = 60, RULE_bitOr = 61, RULE_boolAnd = 62, 
		RULE_boolOr = 63, RULE_expList = 64, RULE_number = 65, RULE_string = 66, 
		RULE_type = 67, RULE_unary = 68, RULE_identifier = 69;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "import_directive", "use_directive", "statement", 
			"ext_block", "body", "record_def", "func_def", "func_stub", "cpp_ext_block", 
			"vm_ext_block", "cpp_func_def", "cpp_var_def", "vm_func_def", "sub_name", 
			"sub_def", "sub_stub", "cpp_sub_def", "vm_sub_def", "any_args", "labelDef", 
			"gotoJump", "breakLoop", "continueLoop", "retStatement", "par", "parlist", 
			"conditional", "if_elseif", "if_else", "for_loop", "range_loop", "for_each_loop", 
			"while_loop", "repeat_loop", "think_loop", "declaration", "constDecUnit", 
			"constDeclaration", "initializer", "varDecUnit", "varDeclaration", "arrayInitializer", 
			"arrayDecUnit", "arrayDeclaration", "assignmentUnit", "assignment", "assignOp", 
			"unaryOp", "propOp", "primaryExpression", "postfixExpression", "exp", 
			"multiplicative", "additive", "shift", "relational", "equality", "bitAnd", 
			"bitXor", "bitOr", "boolAnd", "boolOr", "expList", "number", "string", 
			"type", "unary", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "'+'", 
			"'-'", "'*'", "'**'", "'/'", "'!'", "'%'", "'<'", "'>'", "'<='", "'>='", 
			"'!='", "'=='", "'+='", "'-='", "'*='", "'/='", "'<<='", "'>>='", "'&='", 
			"'^='", "'|='", "'@'", null, null, "'&'", "'|'", "'^'", "'<<'", "'>>'", 
			"'..'", "'...'", "'.'", "':'", "','", "'::'", "'->'", "'\"'", "'?'", 
			"'++'", "'--'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Libstring", "StringLiteral", "L_PAR", "R_PAR", "L_BRAC", "R_BRAC", 
			"L_SBRAC", "R_SBRAC", "EQUAL", "PLUS", "MINUS", "MULT", "POWER", "DIV", 
			"NEGATION", "MOD", "LESSER_THAN", "GREATER_THAN", "LESSER_EQUAL", "GREATER_EQUAL", 
			"NOT_EQUAL", "EQUALS_TO", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", 
			"DIV_ASSIGN", "LSH_ASSIGN", "RSH_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", 
			"OR_ASSIGN", "ADDROP", "BOOL_AND", "BOOL_OR", "BITWISE_AND", "BITWISE_OR", 
			"BITWISE_XOR", "BITWISE_LSH", "BITWISE_RSH", "DOUBLE_PERIOD", "ELLIPSIS", 
			"PERIOD", "COLON", "COMMA", "DOUBLE_COLON", "ARROW", "DOUBLE_QUOTE", 
			"INTERROGATION", "INCREMENT", "DECREMENT", "K_GOTO", "K_AS", "K_IMPORT", 
			"K_USING", "K_SUB", "K_FUNC", "K_RECORD", "K_LOOP", "K_CONST", "K_VAR", 
			"K_COUNT", "K_FOR", "K_BREAK", "K_CONTINUE", "K_EACH", "K_OF", "K_IN", 
			"K_WHILE", "K_REPEAT", "K_UNTIL", "K_VM", "K_CPP", "K_CPP_VAR", "K_IF", 
			"K_ELSE", "K_END", "K_RETURN", "DOUBLE_ARROW", "K_FALSE", "K_TRUE", "K_BYTE", 
			"K_INT", "K_LONG", "K_FLOAT", "K_STRING", "LABEL", "NAME", "INT", "HEX", 
			"BIN", "FLOAT", "COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "onix.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public onixParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(onixParser.EOF, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(140);
					block();
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(146);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Import_directiveContext import_directive() {
			return getRuleContext(Import_directiveContext.class,0);
		}
		public Use_directiveContext use_directive() {
			return getRuleContext(Use_directiveContext.class,0);
		}
		public Sub_defContext sub_def() {
			return getRuleContext(Sub_defContext.class,0);
		}
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public Record_defContext record_def() {
			return getRuleContext(Record_defContext.class,0);
		}
		public Ext_blockContext ext_block() {
			return getRuleContext(Ext_blockContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				import_directive();
				}
				break;
			case K_USING:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				use_directive();
				}
				break;
			case K_SUB:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				sub_def();
				}
				break;
			case K_FUNC:
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				func_def();
				}
				break;
			case K_RECORD:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				record_def();
				}
				break;
			case K_VM:
			case K_CPP:
				enterOuterAlt(_localctx, 6);
				{
				setState(153);
				ext_block();
				}
				break;
			case StringLiteral:
			case L_BRAC:
			case ADDROP:
			case K_GOTO:
			case K_LOOP:
			case K_CONST:
			case K_VAR:
			case K_COUNT:
			case K_FOR:
			case K_BREAK:
			case K_CONTINUE:
			case K_WHILE:
			case K_REPEAT:
			case K_IF:
			case K_RETURN:
			case K_FALSE:
			case K_TRUE:
			case LABEL:
			case NAME:
			case INT:
			case HEX:
			case BIN:
			case FLOAT:
				enterOuterAlt(_localctx, 7);
				{
				setState(154);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_directiveContext extends ParserRuleContext {
		public TerminalNode K_IMPORT() { return getToken(onixParser.K_IMPORT, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode Libstring() { return getToken(onixParser.Libstring, 0); }
		public Import_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_directive; }
	}

	public final Import_directiveContext import_directive() throws RecognitionException {
		Import_directiveContext _localctx = new Import_directiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(K_IMPORT);
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case StringLiteral:
				{
				setState(158);
				string();
				}
				break;
			case Libstring:
				{
				setState(159);
				match(Libstring);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_directiveContext extends ParserRuleContext {
		public TerminalNode K_USING() { return getToken(onixParser.K_USING, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode Libstring() { return getToken(onixParser.Libstring, 0); }
		public Use_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_directive; }
	}

	public final Use_directiveContext use_directive() throws RecognitionException {
		Use_directiveContext _localctx = new Use_directiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_use_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(K_USING);
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case StringLiteral:
				{
				setState(163);
				string();
				}
				break;
			case Libstring:
				{
				setState(164);
				match(Libstring);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public Repeat_loopContext repeat_loop() {
			return getRuleContext(Repeat_loopContext.class,0);
		}
		public For_each_loopContext for_each_loop() {
			return getRuleContext(For_each_loopContext.class,0);
		}
		public Think_loopContext think_loop() {
			return getRuleContext(Think_loopContext.class,0);
		}
		public Range_loopContext range_loop() {
			return getRuleContext(Range_loopContext.class,0);
		}
		public LabelDefContext labelDef() {
			return getRuleContext(LabelDefContext.class,0);
		}
		public GotoJumpContext gotoJump() {
			return getRuleContext(GotoJumpContext.class,0);
		}
		public BreakLoopContext breakLoop() {
			return getRuleContext(BreakLoopContext.class,0);
		}
		public ContinueLoopContext continueLoop() {
			return getRuleContext(ContinueLoopContext.class,0);
		}
		public RetStatementContext retStatement() {
			return getRuleContext(RetStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(182);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(169);
				postfixExpression(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				conditional();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(171);
				for_loop();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(172);
				while_loop();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(173);
				repeat_loop();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(174);
				for_each_loop();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(175);
				think_loop();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(176);
				range_loop();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(177);
				labelDef();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(178);
				gotoJump();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(179);
				breakLoop();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(180);
				continueLoop();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(181);
				retStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ext_blockContext extends ParserRuleContext {
		public Cpp_ext_blockContext cpp_ext_block() {
			return getRuleContext(Cpp_ext_blockContext.class,0);
		}
		public Vm_ext_blockContext vm_ext_block() {
			return getRuleContext(Vm_ext_blockContext.class,0);
		}
		public Ext_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ext_block; }
	}
